--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,135 @@
 
-p {
-  font-family: "Monotype Corsiva";
-  }
+@import url(https://fonts.googleapis.com/css?family=Raleway:900,400);
+@import url(https://fonts.googleapis.com/css?family=Orbitron);
+
+.Image {
+width: 100%;
+height: 100vh;
+background-image: url(images/Back.png);
+background-position: center;
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+box-shadow: 0 12px 6px rgb(0 0 0 / 75%);
+}
+
+.icon{
+  width: 10px;
+  height: 10px;
+}
+
+.header-title {
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  padding:0;
+  margin:0;
+  font-size:30px;
+  color: rgb(255, 255, 255);
+}
+
+.header-title2 {
+  position: absolute;
+  top:55%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  padding:0;
+  margin:0;
+  font-size:20px;
+  color: rgb(255, 255, 255);
+}
+
+.header-title3 {
+  position: absolute;
+  top:60%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  padding:0;
+  margin:0;
+  font-size:15px;
+  color: rgb(255, 255, 255);
+}
+
+.maintitle {
+text-align: center;
+color: whitesmoke;
+}
+
+.no {
+  color: #1a7940;
+}
+
+.Block{
+  height: 50px;
+  background-color: #000000;
+  box-shadow: 0 12px 6px rgb(0 0 0 / 75%);
+}
+
+::-webkit-scrollbar{
+  width: 5px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #600060;
+  border-radius: 2px;
+}
 
 * {
   box-sizing: border-box;
 }
 
+.notifi {
+  width: 250px;
+  height: 35px;
+  color: whitesmoke;
+  background-color: #000000;
+  animation: 5s example5 linear infinite;
+}
+@keyframes example5{
+    0%{background: #e60000}
+    14%{background: #f39800}
+    28%{background: #fff100}
+    42%{background: #009944}
+    56%{background: #0068b7}
+    70%{background: #1d2088}
+    85%{background: #920783}
+    100%{background: #e60000}
+}
+
+.PR2 {
+  color: #1d2988;
+}
+
+.PR1 {
+  color: #272ccb;
+}
+
+.jar {
+    width: 500px;
+    height: 5px;
+    animation: 5s example5 linear infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+@keyframes example5{
+    0%{background: #e60000}
+    14%{background: #f39800}
+    28%{background: #fff100}
+    42%{background: #009944}
+    56%{background: #0068b7}
+    70%{background: #1d2088}
+    85%{background: #920783}
+    100%{background: #e60000}
+}
+
+.vanilla {
+filter: contrast(120%);
+filter: blur(3px);
+}
+
 body {
   margin: 0;
-  font-family: "Hiragino Kaku Gothic ProN";
+  font-family: "Raleway";
 }
 
 a {
@@ -27,14 +147,6 @@ a {
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
-}
-
-.top-wrapper {
-  padding: 180px 0 100px 0;
-  background-image: url(top.png);
-  background-size: cover;
-  color: white;
-  text-align: center;
 }
 
 .top-wrapper h1 {
@@ -89,15 +201,35 @@ a {
 
 .sonota {
   background-color: #505050;
+  transition: all 0.5s;
+  cursor: default;
 }
 .btn {
   padding: 8px 24px;
   color: white;
-  display: inline-block;
+  display: -webkit-inline-box;
   opacity: 0.8;
-  border-radius: 4px;
+  border-radius: 2px;
+  transition: all 0.5s;
   text-align: center;
+  box-shadow: 0 12px 6px rgb(0 0 0 / 75%);
+  font-family: "Orbitron";
 }
+
+span.ripple {
+    position: absolute;
+    border-radius: 50%;
+    transform: scale(0);
+    animation: ripple 600ms linear;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  
+  @keyframes ripple {
+    to {
+      transform: scale(4);
+      opacity: 0;
+    }
+  }
 
 .btn:hover {
   opacity: 1;
@@ -110,7 +242,7 @@ a {
 header {
   height: 65px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.521);
+  background-color: rgb(32, 32, 32);
   position :fixed;
   top: 0;
   z-index: 10;
@@ -128,6 +260,7 @@ header {
 .header-right {
   float: right;
   margin-right: -25px;
+  transition: all 0.5s;
 }
 
 .header-right a {
@@ -139,12 +272,73 @@ header {
   transition: all 0.5s;
 }
 
+
+
+.head a {
+
+  background: linear-gradient(to right,#e60000,#f39800,#fff100,#009944,#0068b7,#1d2088,#920783,#e60000) 0 / 200%;
+  height: 100%;
+  animation: 1s example4 linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 100%;
+  font-weight: bold;
+  display: inline-block;
+  cursor: default;
+  }
+  @keyframes example4{
+  100% { background-position: 200%; }
+  }
+
+.head a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.head {
+  transition: all 0.5s;
+  background: linear-gradient(to right,#e60000,#f39800,#fff100,#009944,#0068b7,#1d2088,#920783,#e60000) 0 / 200%;
+  height: 100%;
+  animation: 1s example4 linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 100%;
+  font-weight: bold;
+  display: inline-block;
+}
+@keyframes example4{
+  100% { background-position: 200%; }
+}
+
+.title {
+  background: linear-gradient(to right,#e60000,#f39800,#fff100,#009944,#0068b7,#1d2088,#920783,#e60000) 0 / 200%;
+  height: 100%;
+  animation: 1s example4 linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 100%;
+  font-weight: bold;
+  display: inline-block;
+}
+@keyframes example4{
+  100% { background-position: 200%; }
+}
+
 .header-right a:hover {
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .header-left a:hover {
-  background-color: rgba(255,255,255,0.3);
+  background: linear-gradient(to right,#e60000,#f39800,#fff100,#009944,#0068b7,#1d2088,#920783,#e60000) 0 / 200%;
+  height: 100%;
+  animation: 1s example4 linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 100%;
+  font-weight: bold;
+  display: inline-block;
+}
+  @keyframes example4{
+  100% { background-position: 200%; }
 }
 
 .lesson-wrapper {
@@ -240,7 +434,7 @@ footer {
 }
 
 body {
-   background-color: #24003acb;
+   background-color: #202020;
 }
 
 .Tests {
@@ -257,18 +451,40 @@ body {
   font-family: Verdana, Geneva, sans-serif;
 }
 
+
+
+.final-footer {
+  margin-top: 20px;
+  background-color: #111;
+  margin-bottom: 1%;
+  box-shadow: 0 0 12px 6px rgb(0 0 0 / 62%);
+}
+
 .Links {
   margin-top: 30px;
+  size: 20px;
   color: whitesmoke;
-  background-color: #313131;
+  background-color: #313131; 
+}
+
+
+.DL {
+  margin-top: 30px;
+  color: whitesmoke;
+  background-color: #313131; 
   font-family: Verdana, Geneva, sans-serif;
+}
+
+
+.Panel {
+  margin-top: 30px;
+  color: whitesmoke;
 }
 
 .Download {
   margin-top: 30px;
   color: whitesmoke;
   background-color: #313131;
-  font-family: Verdana, Geneva, sans-serif;
 }
 
 .credits {
